--- a/index.html
+++ b/index.html
@@ -22,22 +22,18 @@
           <img
             src="./vectors/jacques-cousteau.svg"
             alt="avtar"
-            class="profile__avtar"
+            class="profile__avatar"
           />
         </div>
-        <div class="profile__container">
+        <div class="profile__description">
           <h1 class="profile__title">Jacques Cousteau</h1>
           <p class="profile__subtitle">Explorer</p>
-          <div class="profile__pencil-box">
-            <a href="#"
-              ><img src="./vectors/pencil.svg" alt="pencil" class="pencil"
-            /></a>
-          </div>
+        </div>
+        <div class="profile__edit-box">
+          <pencil class="profile__edit-pencil"></pencil>
         </div>
         <div class="profile__plus-box">
-          <a href="#">
-            <img src="./vectors/Vectorplus.svg" alt="plus" class="plus" />
-          </a>
+          <plus class="profile__plus"></plus>
         </div>
       </section>
       <main class="gallery">
@@ -106,9 +102,9 @@
           </element>
         </div>
       </main>
+      <footer class="footer">
+        <p class="footer__copyright">&copy 2022 Around The U.S.</p>
+      </footer>
     </div>
   </body>
-  <footer class="footer">
-    <p class="footer__copyright">&copy 2022 Around The U.S.</p>
-  </footer>
 </html>
