--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="" content="ie=edge" http-equiv="X-UA-Compatible" />
     <title>Around the US</title>
     <link href="./pages/index.css" rel="stylesheet" />
+    <link href="./vendor/fonts.css" rel="fonts" />
   </head>
   <body>
     <div class="page">
