--- a/index.html
+++ b/index.html
@@ -11,97 +11,101 @@
     <link href="./pages/index.css" rel="stylesheet" />
     <link href="./vendor/fonts.css" rel="fonts" />
   </head>
-  <body>
-    <div class="page">
-      <header class="header">
+  <body class="page">
+    <div class="page__content">
+      <header class="header page__section">
         <div class="header__logo">
-          <img src="./vectors/logo.svg" alt="logo" />
+          <img src="./vectors/logo.svg" alt="Around the U.S. logo" />
         </div>
       </header>
-      <section class="profile">
-        <div>
+      <main class="content">
+        <section class="profile page__section">
           <img
             src="./vectors/jacques-cousteau.svg"
             alt="avtar"
             class="profile__avatar"
           />
-        </div>
-        <div class="profile__info">
-          <h1 class="profile__title">Jacques Cousteau</h1>
-          <div class="profile__edit-button"></div>
-          <p class="profile__subtitle">Explorer</p>
-        </div>
-        <div class="profile__plus-button"></div>
-      </section>
-      <main class="gallery">
-        <ul class="gallery__cards">
-          <li class="card">
-            <img
-              src="./card-images/yosemite.jpg"
-              alt="yosemite"
-              class="card__image"
-            />
-            <div class="card__description">
-              <h2 class="card__title">Yosemite Valley</h2>
-              <img class="card__heart" src="./vectors/Vector.svg" alt="heart" />
-            </div>
-          </li>
-          <li class="card">
-            <img
-              src="./card-images/lake-louise.jpg"
-              alt="lake louise"
-              class="card__image"
-            />
-            <div class="card__description">
-              <h2 class="card__title">Lake Louise</h2>
-              <img class="card__heart" src="./vectors/Vector.svg" alt="heart" />
-            </div>
-          </li>
-          <li class="card">
-            <img
-              src="./card-images/bald-mountains.jpg"
-              alt="bald mountains"
-              class="card__image"
-            />
-            <div class="card__description">
-              <h2 class="card__title">Bald Mountains</h2>
-              <img class="card__heart" src="./vectors/Vector.svg" alt="heart" />
-            </div>
-          </li>
-          <li class="card">
-            <img
-              src="./card-images/latemar.jpg"
-              alt="katemar"
-              class="card__image"
-            />
-            <div class="card__description">
-              <h2 class="card__title">Latemar</h2>
-              <img class="card__heart" src="./vectors/Vector.svg" alt="heart" />
-            </div>
-          </li>
-          <li class="card">
-            <img
-              src="./card-images/vanoise.jpg"
-              alt="vanoise"
-              class="card__image"
-            />
-            <div class="card__description">
-              <h2 class="card__title">Vanoise Nationa...</h2>
-              <img class="card__heart" src="./vectors/Vector.svg" alt="heart" />
-            </div>
-          </li>
-          <li class="card">
-            <img src="./card-images/lago.jpg" alt="lago" class="card__image" />
-            <div class="card__description">
-              <h2 class="card__title">Lago di Braise</h2>
-              <img class="card__heart" src="./vectors/Vector.svg" alt="heart" />
-            </div>
-          </li>
-        </ul>
+          <div class="profile__info">
+            <h1 class="profile__title">Jacques Cousteau</h1>
+            <button class="profile__edit-button"></button>
+            <p class="profile__description">Explorer</p>
+          </div>
+          <button class="profile__plus-button"></button>
+        </section>
+        <section class="cards page__section">
+          <ul class="card__list">
+            <li class="card">
+              <img
+                src="./card-images/yosemite.jpg"
+                alt="yosemite"
+                class="card__image"
+              />
+              <div class="card__description">
+                <h2 class="card__title">Yosemite Valley</h2>
+                <button class="card__heart-button"></button>
+              </div>
+            </li>
+            <li class="card">
+              <img
+                src="./card-images/lake-louise.jpg"
+                alt="lake louise"
+                class="card__image"
+              />
+              <div class="card__description">
+                <h2 class="card__title">Lake Louise</h2>
+                <button class="card__heart-button"></button>
+              </div>
+            </li>
+            <li class="card">
+              <img
+                src="./card-images/bald-mountains.jpg"
+                alt="bald mountains"
+                class="card__image"
+              />
+              <div class="card__description">
+                <h2 class="card__title">Bald Mountains</h2>
+                <button class="card__heart-button"></button>
+              </div>
+            </li>
+            <li class="card">
+              <img
+                src="./card-images/latemar.jpg"
+                alt="katemar"
+                class="card__image"
+              />
+              <div class="card__description">
+                <h2 class="card__title">Latemar</h2>
+                <button class="card__heart-button"></button>
+              </div>
+            </li>
+            <li class="card">
+              <img
+                src="./card-images/vanoise.jpg"
+                alt="vanoise"
+                class="card__image"
+              />
+              <div class="card__description">
+                <h2 class="card__title">Vanoise Nationa...</h2>
+                <button class="card__heart-button"></button>
+              </div>
+            </li>
+            <li class="card">
+              <img
+                src="./card-images/lago.jpg"
+                alt="lago"
+                class="card__image"
+              />
+              <div class="card__description">
+                <h2 class="card__title">Lago di Braise</h2>
+                <button class="card__heart-button"></button>
+              </div>
+            </li>
+          </ul>
+        </section>
+        <footer class="footer page__section">
+          <p class="footer__copyright">&copy 2022 Around The U.S.</p>
+        </footer>
       </main>
-      <footer class="footer">
-        <p class="footer__copyright">&copy 2022 Around The U.S.</p>
-      </footer>
     </div>
   </body>
 </html>
