--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
           </div>
           <button class="profile__plus-button"></button>
         </section>
-        <section class="cards page__section">
-          <ul class="card__list">
+        <section class="gallery page__section">
+          <ul class="gallery__cards">
             <li class="card">
               <img
                 src="./card-images/yosemite.jpg"
@@ -85,7 +85,7 @@
                 class="card__image"
               />
               <div class="card__description">
-                <h2 class="card__title">Vanoise Nationa...</h2>
+                <h2 class="card__title">Vanoise National Park</h2>
                 <button class="card__heart-button"></button>
               </div>
             </li>
@@ -102,10 +102,10 @@
             </li>
           </ul>
         </section>
-        <footer class="footer page__section">
-          <p class="footer__copyright">&copy 2022 Around The U.S.</p>
-        </footer>
       </main>
+      <footer class="footer page__section">
+        <p class="footer__copyright">&copy 2022 Around The U.S.</p>
+      </footer>
     </div>
   </body>
 </html>
