--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta chartset="UTF-8" />
+    <meta charset="UTF-8" />
     <meta
       name="viewport"
-      content="width=device-width, user-scalable=no, intial-scale=1.0,  maximum-scale=1.0, minimum-scale=1.0"
+      content="width=device-width, user-scalable=no, initial-scale=1.0,  maximum-scale=1.0, minimum-scale=1.0"
     />
-    <meta name="" content="ie=edge" http-equiv="X-UA-Compatible" />
-    <title>Around the US</title>
+    <meta content="ie=edge" http-equiv="X-UA-Compatible" />
+    <title>Around the U.S.</title>
     <link href="./pages/index.css" rel="stylesheet" />
     <link href="./vendor/fonts.css" rel="fonts" />
   </head>
@@ -104,7 +104,7 @@
         </section>
       </main>
       <footer class="footer page__section">
-        <p class="footer__copyright">&copy 2022 Around The U.S.</p>
+        <p class="footer__copyright">&copy; 2022 Around The U.S.</p>
       </footer>
     </div>
   </body>
