--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
     <meta content="ie=edge" http-equiv="X-UA-Compatible" />
     <title>Around the U.S.</title>
     <link href="./pages/index.css" rel="stylesheet" />
-    <link href="./vendor/fonts.css" rel="fonts" />
   </head>
   <body class="page">
     <div class="page__content">
       <header class="header page__section">
-        <div class="header__logo">
-          <img src="./vectors/logo.svg" alt="Around the U.S. logo" />
-        </div>
+        <img
+          class="header__logo"
+          src="./vectors/logo.svg"
+          alt="Around the U.S. logo"
+        />
       </header>
       <main class="content">
         <section class="profile page__section">
@@ -104,7 +105,7 @@
         </section>
       </main>
       <footer class="footer page__section">
-        <p class="footer__copyright">&copy; 2022 Around The U.S.</p>
+        <p class="footer__copyright">&copy; 2023 Around The U.S.</p>
       </footer>
     </div>
   </body>
