--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
           />
           <div class="profile__info">
             <h1 class="profile__title">Jacques Cousteau</h1>
-            <button class="profile__edit-button"></button>
+            <button type="button" class="profile__edit-button"></button>
             <p class="profile__description">Explorer</p>
           </div>
-          <button class="profile__plus-button"></button>
+          <button type="button" class="profile__plus-button"></button>
         </section>
         <section class="gallery page__section">
           <ul class="gallery__cards">
@@ -43,7 +43,7 @@
               />
               <div class="card__description">
                 <h2 class="card__title">Yosemite Valley</h2>
-                <button class="card__heart-button"></button>
+                <button type="button" class="card__heart-button"></button>
               </div>
             </li>
             <li class="card">
@@ -54,7 +54,7 @@
               />
               <div class="card__description">
                 <h2 class="card__title">Lake Louise</h2>
-                <button class="card__heart-button"></button>
+                <button type="button" class="card__heart-button"></button>
               </div>
             </li>
             <li class="card">
@@ -65,7 +65,7 @@
               />
               <div class="card__description">
                 <h2 class="card__title">Bald Mountains</h2>
-                <button class="card__heart-button"></button>
+                <button type="button" class="card__heart-button"></button>
               </div>
             </li>
             <li class="card">
@@ -76,7 +76,7 @@
               />
               <div class="card__description">
                 <h2 class="card__title">Latemar</h2>
-                <button class="card__heart-button"></button>
+                <button type="button" class="card__heart-button"></button>
               </div>
             </li>
             <li class="card">
@@ -87,7 +87,7 @@
               />
               <div class="card__description">
                 <h2 class="card__title">Vanoise National Park</h2>
-                <button class="card__heart-button"></button>
+                <button type="button" class="card__heart-button"></button>
               </div>
             </li>
             <li class="card">
@@ -98,7 +98,7 @@
               />
               <div class="card__description">
                 <h2 class="card__title">Lago di Braise</h2>
-                <button class="card__heart-button"></button>
+                <button type="button" class="card__heart-button"></button>
               </div>
             </li>
           </ul>
