--- a/index.html
+++ b/index.html
@@ -22,11 +22,8 @@
       <main class="content">
         <section class="profile page__section">
           <div class="profile__avatar">
-          <img
-            src="./vectors/jacques-cousteau.svg"
-            alt="avtar"
-            />
-        </div>
+            <img src="./vectors/jacques-cousteau.svg" alt="avtar" />
+          </div>
           <div class="profile__info">
             <h1 class="profile__title">Jacques Cousteau</h1>
             <button type="button" class="profile__edit-button"></button>
