--- a/index.html
+++ b/index.html
@@ -35,67 +35,100 @@
           <ul class="gallery__cards">
             <li class="card">
               <img
-                src="./card-images/yosemite.jpg"
-                alt="yosemite"
+                src="./card-images/alexander-andrews-yOIT88xWkbg-unsplash.jpg"
+                alt="Lonely Earth"
                 class="card__image"
               />
               <div class="card__description">
-                <h2 class="card__title">Yosemite Valley</h2>
+                <h2 class="card__title">Lonely Earth</h2>
                 <button type="button" class="card__heart-button"></button>
               </div>
             </li>
             <li class="card">
               <img
-                src="./card-images/lake-louise.jpg"
-                alt="lake louise"
+                src="./card-images/art-institute-of-chicago-SLtSqhLypuc-unsplash.jpg"
+                alt="boys bathing"
                 class="card__image"
               />
               <div class="card__description">
-                <h2 class="card__title">Lake Louise</h2>
+                <h2 class="card__title">Boys Bathing</h2>
                 <button type="button" class="card__heart-button"></button>
               </div>
             </li>
             <li class="card">
               <img
-                src="./card-images/bald-mountains.jpg"
-                alt="bald mountains"
+                src="./card-images/filipe-freitas-9A5wyDXopWI-unsplash.jpg"
+                alt="cloudy sunrise"
                 class="card__image"
               />
               <div class="card__description">
-                <h2 class="card__title">Bald Mountains</h2>
+                <h2 class="card__title">Cloudy Sunrise</h2>
                 <button type="button" class="card__heart-button"></button>
               </div>
             </li>
             <li class="card">
               <img
-                src="./card-images/latemar.jpg"
-                alt="katemar"
+                src="./card-images/guille-pozzi-SHcHVFhz7-M-unsplash.jpg"
+                alt="bariloche Argentina"
                 class="card__image"
               />
               <div class="card__description">
-                <h2 class="card__title">Latemar</h2>
+                <h2 class="card__title">Bariloche Argentina</h2>
                 <button type="button" class="card__heart-button"></button>
               </div>
             </li>
             <li class="card">
               <img
-                src="./card-images/vanoise.jpg"
-                alt="vanoise"
+                src="./card-images/ilia-bronskiy-uTLzs3j7Glw-unsplash.jpg"
+                alt="Zurich Swizerland"
                 class="card__image"
               />
               <div class="card__description">
-                <h2 class="card__title">Vanoise National Park</h2>
+                <h2 class="card__title">Zurich Swizerland</h2>
                 <button type="button" class="card__heart-button"></button>
               </div>
             </li>
             <li class="card">
               <img
-                src="./card-images/lago.jpg"
-                alt="lago"
+                src="./card-images/julia-solonina-cR88oyyXdPk-unsplash.jpg"
+                alt="Eltz castle"
                 class="card__image"
               />
               <div class="card__description">
-                <h2 class="card__title">Lago di Braise</h2>
+                <h2 class="card__title">Eltz Castle</h2>
+                <button type="button" class="card__heart-button"></button>
+              </div>
+            </li>
+            <li class="card">
+              <img
+                src="./card-images/omid-armin-tmD2T6L4cWA-unsplash.jpg"
+                alt="Teran"
+                class="card__image"
+              />
+              <div class="card__description">
+                <h2 class="card__title">Teran</h2>
+                <button type="button" class="card__heart-button"></button>
+              </div>
+            </li>
+            <li class="card">
+              <img
+                src="./card-images/viktor-zhulin-n7XxYtxp23M-unsplash.jpg"
+                alt="Flowers"
+                class="card__image"
+              />
+              <div class="card__description">
+                <h2 class="card__title">Flowers</h2>
+                <button type="button" class="card__heart-button"></button>
+              </div>
+            </li>
+            <li class="card">
+              <img
+                src="./card-images/mery-khachatryan-479rJrzXXQw-unsplash.jpg"
+                alt="no face to be shown"
+                class="card__image"
+              />
+              <div class="card__description">
+                <h2 class="card__title">No face to be shown</h2>
                 <button type="button" class="card__heart-button"></button>
               </div>
             </li>
@@ -106,5 +139,6 @@
         <p class="footer__copyright">&copy; 2023 Around The U.S.</p>
       </footer>
     </div>
+    <script src="./scripts/index.js"></script>
   </body>
 </html>
