--- a/index.html
+++ b/index.html
@@ -106,6 +106,17 @@
         <p class="footer__copyright">&copy; 2023 Around The U.S.</p>
       </footer>
     </div>
+    <div class="modal">
+      <div class="modal__container">
+        <button type="button" class="modal__close-button"></button>
+        <h2 class="modal__title">Edit profile</h2>
+        <form class="modal__form">
+          <input type="text" placeholder="Jacques Cousteau" required />
+          <input type="text" placeholder="explorer" required />
+          <button type="submit" class="modal__submit-button">Save</button>
+        </form>
+      </div>
+    </div>
     <script src="./scripts/index.js"></script>
   </body>
 </html>
