--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
           </div>
           <div class="profile__info">
             <h1 class="profile__title">Jacques Cousteau</h1>
-            <button type="button" class="profile__edit-button"></button>
+            <button
+              type="button"
+              id="profile-edit-button"
+              class="profile__edit-button"
+            ></button>
             <p class="profile__description">Explorer</p>
           </div>
           <button type="button" class="profile__plus-button"></button>
@@ -106,13 +110,25 @@
         <p class="footer__copyright">&copy; 2023 Around The U.S.</p>
       </footer>
     </div>
-    <div class="modal">
+    <div class="modal modal_opened" id="profile-edit-modal">
       <div class="modal__container">
         <button type="button" class="modal__close-button"></button>
         <h2 class="modal__title">Edit profile</h2>
         <form class="modal__form">
-          <input type="text" placeholder="Jacques Cousteau" required />
-          <input type="text" placeholder="explorer" required />
+          <input
+            type="text"
+            name="name"
+            id="profile-name-input"
+            placeholder="name"
+            required
+          />
+          <input
+            type="text"
+            name="description"
+            id="profile-description-input"
+            placeholder="description"
+            required
+          />
           <button type="submit" class="modal__submit-button">Save</button>
         </form>
       </div>
