--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
         <p class="footer__copyright">&copy; 2023 Around The U.S.</p>
       </footer>
     </div>
-    <div class="modal modal_opened">
+    <div class="modal">
       <div class="modal__container">
         <button type="button" class="modal__close-button"></button>
         <h2 class="modal__title">Edit profile</h2>
-        <form class="modal__form">
+        <form class="modal__form" name="profile-form">
           <input
             type="text"
             name="name"
