feat/ add new card modal, refactor modal variable

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       </footer>
     </div>
 
-    <!-- editProfile-modal -->
+    <!-- edit-profile-modal -->
 
     <div class="modal modal_opened" id="edit-modal">
       <div class="modal__container">
@@ -71,7 +71,7 @@
       </div>
     </div>
 
-    <!-- addCard-modal -->
+    <!-- add-card-modal -->
 
     <div class="modal modal_opened" id="add-card-modal">
       <div class="modal__container">
