feat/ add trash-button for cards

--- a/index.html
+++ b/index.html
@@ -46,13 +46,12 @@
 
     <!-- edit-profile-modal -->
 
-    <div class="modal modal_opened" id="edit-modal">
+    <div class="modal" id="edit-modal">
       <div class="modal__container">
-        <button type="button" class="modal__close"></button>
+        <button type="button" class="modal__close-button"></button>
         <h2 class="modal__title">Edit profile</h2>
-        <form class="modal__form" id="edit-profile-form">
+        <form class="modal__form" id="profile-form">
           <input
-          class="modal__input modal__input_type_name" 
             type="text"
             name="name"
             id="profile-name-input"
@@ -73,13 +72,12 @@
 
     <!-- add-card-modal -->
 
-    <div class="modal modal_opened" id="add-card-modal">
+    <div class="modal" id="add-card-modal">
       <div class="modal__container">
-        <button type="button" class="modal__close"></button>
+        <button type="button" class="modal__close-button"></button>
         <h2 class="modal__title">New Place</h2>
         <form class="modal__form" id="add-card-form">
           <input
-          class="modal__input modal__input_type_title"
             type="text"
             name="Title"
             id="card-title-input"
@@ -90,7 +88,7 @@
             type="text"
             name="URL"
             id="card-url-input"
-            placeholder="image-url"
+            placeholder="Image URL"
             required
           />
           <button type="submit" class="modal__submit-button">Create</button>
@@ -98,7 +96,9 @@
       </div>
     <template id="card-template">
       <li class="card">
-        <img src="" alt="" class="card__image" />
+        <div class="card__container">
+        <button type="button" class="card__trash-button"></button>
+        <img src="" alt="" class="card__image" /></div>
         <div class="card__description">
           <h2 class="card__title"></h2>
           <button type="button" class="card__heart-button"></button>
