--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       </div>
     <template id="card-template">
       <li class="card">
-        <div class="card__container">
+        <div class="card__image-container">
         <button type="button" class="card__trash-button"></button>
         <img src="" alt="" class="card__image" /></div>
         <div class="card__description">
