--- a/index.html
+++ b/index.html
@@ -94,10 +94,20 @@
           <button type="submit" class="modal__submit-button">Create</button>
         </form>
       </div>
+
+         <!-- modal image popup -->
+
+       <div class="modal" id="image-popup-modal">
+        <button type="button" class="modal__close-button"></button>
+        <img src="" alt="" class="modal__image">
+        <h2 class="modal__image-title"></h2>
+      </div>
+
+       <!-- card template -->
+
     <template id="card-template">
       <li class="card">
-        <div class="card__image-popup" id="popup">
-          <button type="button" class="card__close-button"></button> 
+        <div class="card__image-container">
         <button type="button" class="card__delete-button"></button>
         <img src="" alt="" class="card__image" /></div>
         <div class="card__description">
