--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
         </form>
       </div>
 
-         <!-- modal image popup -->
+         <!-- modal image  -->
 
-       <div class="modal" id="image-popup-modal">
+       <div class="modal" id="image-modal">
         <button type="button" class="modal__close-button"></button>
         <img src="" alt="" class="modal__image">
         <h2 class="modal__image-title"></h2>
