fix/ functions issues for previewimage modal and imagemodal Html

--- a/index.html
+++ b/index.html
@@ -97,19 +97,19 @@
 
          <!-- modal image  -->
 
-       <div class="modal" id="image-modal">
+       <div class="modal" id="preview-image-modal">
         <button type="button" class="modal__close-button"></button>
-        <img src="" alt="" class="modal__image">
-        <h2 class="modal__image-title"></h2>
+        <img src="" alt="" class="modal__preview-image">
+        <p class="modal__preview-image-text"></p>
       </div>
 
        <!-- card template -->
 
     <template id="card-template">
       <li class="card">
-        <div class="card__image-container">
+        <!-- <div class="card__image-container"> -->
         <button type="button" class="card__delete-button"></button>
-        <img src="" alt="" class="card__image" /></div>
+        <img src="" alt="" class="card__image" />
         <div class="card__description">
           <h2 class="card__title"></h2>
           <button type="button" class="card__heart-button"></button>
