--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
             <h1 class="profile__title">Jacques Cousteau</h1>
             <button
               type="button"
-              id="profile-open-button"
               class="profile__edit-button"
             ></button>
             <p class="profile__description">Explorer</p>
@@ -48,7 +47,7 @@
 
     <div class="modal" id="edit-modal">
       <div class="modal__container">
-        <button type="button" class="modal__close-button"></button>
+        <button type="button" class="modal__close-button" id="profile-modal-closed"></button>
         <h2 class="modal__title">Edit profile</h2>
         <form class="modal__form" id="profile-form">
           <input
@@ -74,7 +73,7 @@
 
     <div class="modal" id="add-card-modal">
       <div class="modal__container">
-        <button type="button" class="modal__close-button"></button>
+        <button type="button" class="modal__close-button" id="add-card-modal-closed"></button>
         <h2 class="modal__title">New Place</h2>
         <form class="modal__form" id="add-card-form">
           <input
@@ -98,18 +97,17 @@
          <!-- modal image  -->
 
        <div class="modal" id="preview-image-modal">
-        <button type="button" class="modal__close-button"></button>
-        <img src="" alt="" class="modal__preview-image">
-        <p class="modal__preview-image-text"></p>
+        <button type="button" class="modal__close-button" id="preview-image-closed"></button>
+        <img src="#" alt="" class="modal__preview-image">
+        <p class="modal__preview-text"></p>
       </div>
 
        <!-- card template -->
 
     <template id="card-template">
       <li class="card">
-        <!-- <div class="card__image-container"> -->
         <button type="button" class="card__delete-button"></button>
-        <img src="" alt="" class="card__image" />
+        <img src="#" alt="" class="card__image" />
         <div class="card__description">
           <h2 class="card__title"></h2>
           <button type="button" class="card__heart-button"></button>
