--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           id="add-card-modal-closed"
         ></button>
         <h2 class="modal__title">New Place</h2>
-        <form class="modal__form" id="add-card-form">
+        <form class="modal__form" id="card-form">
           <input
             type="text"
             name="Title"
