feat/ add my avatar and approved

--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
       <main class="content">
         <section class="profile page__section">
           <div class="profile__avatar">
-            <img src="./vectors/jacques-cousteau.svg" alt="avtar" />
+            <img src="./vectors/IMG_4952 2.JPG" alt="avtar" />
           </div>
           <div class="profile__info">
-            <h1 class="profile__title">Jacques Cousteau</h1>
+            <h1 class="profile__title">Samuel Luo</h1>
             <button type="button" class="profile__edit-button"></button>
-            <p class="profile__description">Explorer</p>
+            <p class="profile__description">Software Engineer</p>
           </div>
           <button type="button" class="profile__plus-button"></button>
         </section>
