feat/ add validity.js, form.css, and new tags in the forms of HTML

--- a/index.html
+++ b/index.html
@@ -50,22 +50,34 @@
           id="profile-modal-closed"
         ></button>
         <h2 class="modal__title">Edit profile</h2>
-        <form class="modal__form" id="profile-form">
-          <input
-            type="text"
-            name="name"
-            id="profile-name-input"
-            placeholder="name"
-            required
-          />
-          <input
-            type="text"
-            name="description"
-            id="profile-description-input"
-            placeholder="description"
-            required
-          />
-          <button type="submit" class="modal__submit-button">Save</button>
+        <form class="modal__form" id="profile-form" novalidate>
+          <fieldset class="form__set">
+            <label class="form__field">
+              <input
+                type="text"
+                name="name"
+                class="form__input"
+                id="profile-name-input"
+                placeholder="Name"
+                minlenth="2"
+                maxlength="40"
+                required
+              />
+            </label>
+            <label class="form__field">
+              <input
+                type="text"
+                name="description"
+                class="form__input"
+                id="profile-description-input"
+                placeholder="Description"
+                minlength="2"
+                maxlength="200"
+                required
+              />
+            </label>
+            <button type="submit" class="modal__submit-button">Save</button>
+          </fieldset>
         </form>
       </div>
     </div>
@@ -80,22 +92,32 @@
           id="add-card-modal-closed"
         ></button>
         <h2 class="modal__title">New Place</h2>
-        <form class="modal__form" id="card-form">
-          <input
-            type="text"
-            name="Title"
-            id="card-title-input"
-            placeholder="Title"
-            required
-          />
-          <input
-            type="text"
-            name="URL"
-            id="card-url-input"
-            placeholder="Image Url"
-            required
-          />
-          <button type="submit" class="modal__submit-button">Create</button>
+        <form class="modal__form" id="card-form" novalidate>
+          <fieldset class="form__set">
+            <label class="form__field">
+              <input
+                type="text"
+                name="Title"
+                class="form__input"
+                id="card-title-input"
+                placeholder="Title"
+                minlength="1"
+                maxlength="30"
+                required
+              />
+            </label>
+            <label class="form__field">
+              <input
+                type="text"
+                name="URL"
+                class="form__input"
+                id="card-url-input"
+                placeholder="Image Url"
+                required
+              />
+            </label>
+            <button type="submit" class="modal__submit-button">Create</button>
+          </fieldset>
         </form>
       </div>
     </div>
@@ -126,6 +148,8 @@
         </div>
       </li>
     </template>
+    <!-- scripts -->
     <script src="./scripts/index.js"></script>
+    <script src="./scripts/validate.js"></script>
   </body>
 </html>
