fix/ html class of modal__form, validility.js

--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
         ></button>
         <h2 class="modal__title">Edit profile</h2>
         <form class="modal__form" id="profile-form" novalidate>
-          <fieldset class="form__set">
-            <label class="form__field">
+          <fieldset class="modal__form-fieldset">
+            <label class="modal__form-label">
               <input
                 type="text"
                 name="name"
-                class="form__input"
+                class="modal__form-input"
                 id="profile-name-input"
                 placeholder="Name"
                 minlenth="2"
@@ -64,11 +64,11 @@
                 required
               />
             </label>
-            <label class="form__field">
+            <label class="modal__form-label">
               <input
                 type="text"
                 name="description"
-                class="form__input"
+                class="modal__form-input"
                 id="profile-description-input"
                 placeholder="Description"
                 minlength="2"
@@ -93,12 +93,12 @@
         ></button>
         <h2 class="modal__title">New Place</h2>
         <form class="modal__form" id="card-form" novalidate>
-          <fieldset class="form__set">
-            <label class="form__field">
+          <fieldset class="modal__form-fieldset">
+            <label class="modal__form-label">
               <input
                 type="text"
                 name="Title"
-                class="form__input"
+                class="modal__form-input"
                 id="card-title-input"
                 placeholder="Title"
                 minlength="1"
@@ -106,11 +106,11 @@
                 required
               />
             </label>
-            <label class="form__field">
+            <label class="modal__form-label">
               <input
                 type="text"
                 name="URL"
-                class="form__input"
+                class="modal__form-input"
                 id="card-url-input"
                 placeholder="Image Url"
                 required
