--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <div class="profile__info">
             <h1 class="profile__title">Samuel Luo</h1>
             <button type="button" class="profile__edit-button"></button>
-            <p class="profile__description">Software Engineer</p>
+            <p class="profile__description">SoftwareEngineer 2023</p>
           </div>
           <button type="button" class="profile__plus-button"></button>
         </section>
@@ -62,7 +62,7 @@
               required
             />
             <span
-              class="modal__input_type_error"
+              class="modal__error modal__error_visible"
               id="profile-name-input-error"
             ></span>
           </label>
@@ -77,7 +77,7 @@
               required
             />
             <span
-              class="modal__input_type_error"
+              class="modal__error modal__error_visible"
               id="profile-description-input-error"
             ></span>
           </label>
@@ -115,9 +115,10 @@
               required
             />
             <span
-              class="modal__input_type_error"
+              class="modal__error modal__error_visible"
               id="card-title-input-error"
-            ></span>
+              >Please fill out this field</span
+            >
           </label>
           <label class="modal__label">
             <input
@@ -129,9 +130,10 @@
               required
             />
             <span
-              class="modal__input_type_error"
+              class="modal__error modal__error_visible"
               id="card-url-input-error"
-            ></span>
+              >Please enter a web address</span
+            >
           </label>
           <button
             type="submit"
