fix/ the first three errors of HTML from the first automatical review

--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
       <main class="content">
         <section class="profile page__section">
           <div class="profile__avatar">
-            <img src="./vectors/IMG_4952 2.JPG" alt="avtar" />
+            <img src="./vectors/jacques-cousteau.svg" alt="avtar" />
           </div>
           <div class="profile__info">
-            <h1 class="profile__title">Samuel Luo</h1>
+            <h1 class="profile__title">Jacques Cousteau</h1>
             <button type="button" class="profile__edit-button"></button>
-            <p class="profile__description">SoftwareEngineer 2023</p>
+            <p class="profile__description">Explore</p>
           </div>
           <button type="button" class="profile__plus-button"></button>
         </section>
@@ -50,7 +50,7 @@
           id="profile-modal-closed"
         ></button>
         <h2 class="modal__title">Edit profile</h2>
-        <form class="modal__form" id="profile-form" novalidate disabled>
+        <form class="modal__form" id="profile-form" novalidate>
           <label class="modal__label">
             <input
               type="text"
@@ -102,7 +102,7 @@
           id="add-card-modal-closed"
         ></button>
         <h2 class="modal__title">New Place</h2>
-        <form class="modal__form" id="card-form" novalidate disabled>
+        <form class="modal__form" id="card-form" novalidate>
           <label class="modal__label">
             <input
               type="text"
