--- a/index.html
+++ b/index.html
@@ -84,7 +84,6 @@
           <button
             type="submit"
             class="modal__submit-button modal__submit-button_disabled"
-            disabled
           >
             Save
           </button>
@@ -138,7 +137,6 @@
           <button
             type="submit"
             class="modal__submit-button modal__submit-button_disabled"
-            disabled
           >
             Create
           </button>
@@ -173,7 +171,7 @@
       </li>
     </template>
     <!-- scripts -->
-    <script src="./scripts/index.js"></script>
-    <script src="./scripts/validate.js"></script>
+    <script src="./scripts/index.js" defer></script>
+    <script src="./scripts/validate.js" defer></script>
   </body>
 </html>
