--- a/index.html
+++ b/index.html
@@ -61,10 +61,7 @@
               maxlength="40"
               required
             />
-            <span
-              class="modal__error modal__error_visible"
-              id="profile-name-input-error"
-            ></span>
+            <span class="modal__error" id="profile-name-input-error"></span>
           </label>
           <label class="modal__label">
             <input
@@ -77,7 +74,7 @@
               required
             />
             <span
-              class="modal__error modal__error_visible"
+              class="modal__error"
               id="profile-description-input-error"
             ></span>
           </label>
@@ -113,11 +110,7 @@
               maxlength="30"
               required
             />
-            <span
-              class="modal__error modal__error_visible"
-              id="card-title-input-error"
-              >Please fill out this field</span
-            >
+            <span class="modal__error" id="card-title-input-error"></span>
           </label>
           <label class="modal__label">
             <input
@@ -128,11 +121,7 @@
               placeholder="URL"
               required
             />
-            <span
-              class="modal__error modal__error_visible"
-              id="card-url-input-error"
-              >Please enter a web address</span
-            >
+            <span class="modal__error" id="card-url-input-error"></span>
           </label>
           <button
             type="submit"
