--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
       </li>
     </template>
     <!-- scripts -->
-    <script src="./scripts/index.js" defer></script>
-    <script src="./scripts/validate.js" defer></script>
+    <script type="module" src="./components/Card.js" defer></script>
+    <script type="module"  src="./components/FormValidator.js" defer></script>
   </body>
 </html>
