fix errors from webpack

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
       <header class="header page__section">
         <img
           class="header__logo"
-          src="<%=require('./src/vectors/logo.svg')%>"
+          src="<%=require('./vectors/logo.svg')%>"
           alt="Around the U.S. logo"
         />
       </header>
@@ -22,7 +22,7 @@
         <section class="profile page__section">
           <div class="profile__avatar">
             <img
-              src="<%=require('.src/vectors/jacques-cousteau.svg')%>"
+              src="<%=require('./vectors/jacques-cousteau.svg')%>"
               alt="avtar"
             />
           </div>
