fix/ forms still not open

--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
               type="text"
               class="modal__input"
               id="profile-name-input"
-              placeholder="Name"
+              placeholder="name"
               minlength="2"
               maxlength="40"
               required
@@ -70,7 +70,7 @@
               type="text"
               class="modal__input"
               id="profile-description-input"
-              placeholder="Description"
+              placeholder="description"
               minlength="2"
               maxlength="200"
               required
