fix/  i fixed the userinfo issues with debugger

--- a/src/index.html
+++ b/src/index.html
@@ -56,6 +56,7 @@
           <label class="modal__label">
             <input
               type="text"
+              name="name"
               class="modal__input"
               id="profile-name-input"
               placeholder="name"
@@ -68,6 +69,7 @@
           <label class="modal__label">
             <input
               type="text"
+              name="description"
               class="modal__input"
               id="profile-description-input"
               placeholder="description"
