--- a/src/index.html
+++ b/src/index.html
@@ -209,10 +209,11 @@
     <template id="card-template">
       <li class="card">
         <img src="#" alt="" class="card__image" />
+        <button type="button" class="card__delete-button"></button>
         <div class="card__description">
           <h2 class="card__title"></h2>
           <button type="button" class="card__heart-button"></button>
-          <button type="button" class="card__delete-button"></button>
+          <div class="card__heart-number"></div>
         </div>
       </li>
     </template>
