fix/ modals were pop out, but submitting issues still here

--- a/src/index.html
+++ b/src/index.html
@@ -195,12 +195,14 @@
           id="delete-card-modal-closed"
         ></button>
         <h2 class="modal__title">Are you sure?</h2>
-        <button
-          type="submit"
-          class="modal__submit-button modal__submit-button_disabled"
-        >
-          Yes
-        </button>
+        <form class="modal__form" id="delete-form">
+          <button
+            type="submit"
+            class="modal__submit-button modal__submit-button_disabled"
+          >
+            Yes
+          </button>
+        </form>
       </div>
     </div>
 
