fix/ modals and submit issues. still has two modalsubmit not work

--- a/src/index.html
+++ b/src/index.html
@@ -195,7 +195,7 @@
           id="delete-card-modal-closed"
         ></button>
         <h2 class="modal__title">Are you sure?</h2>
-        <form class="modal__form" id="delete-form">
+        <form class="modal__form" id="delete-form" novalidate>
           <button
             type="submit"
             class="modal__submit-button modal__submit-button_disabled"
