fix// issues messed around

--- a/src/index.html
+++ b/src/index.html
@@ -215,7 +215,7 @@
         <div class="card__description">
           <h2 class="card__title"></h2>
           <button type="button" class="card__heart-button"></button>
-          <div class="card__heart-number"></div>
+          <div class="card__heart-count"></div>
         </div>
       </li>
     </template>
