--- a/src/index.html
+++ b/src/index.html
@@ -57,8 +57,8 @@
         <form class="modal__form" id="avatar-form" novalidate>
           <label class="modal__label">
             <input
-              type="text"
-              name="url"
+              type="url"
+              name="link"
               class="modal__input"
               id="avatar-url-input"
               placeholder="Image URL"
@@ -140,7 +140,7 @@
           <label class="modal__label">
             <input
               type="text"
-              name="Title"
+              name="name"
               class="modal__input"
               id="card-title-input"
               placeholder="Title"
@@ -152,8 +152,8 @@
           </label>
           <label class="modal__label">
             <input
-              type="text"
-              name="URL"
+              type="url"
+              name="link"
               class="modal__input"
               id="card-url-input"
               placeholder="URL"
