fix/ everything was fixed so far

--- a/src/index.html
+++ b/src/index.html
@@ -219,7 +219,7 @@
         <div class="card__description">
           <h2 class="card__title"></h2>
           <button type="button" class="card__heart-button"></button>
-          <div class="card__heart-count"></div>
+          <!-- <span class="card__heart-count" id="likeCount">0</span> -->
         </div>
       </li>
     </template>
